# dev-agent-prilot

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
examples/: issue.md
src/issuefix_agent/: __init__.py  agent.py  api.py  cli.py  config.py  llm.py  models.py  prompts.py  repo.py
tests/: test_agent.py  test_llm.py  test_repo.py
