[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-agent-prilot"
version = "0.1.0"
description = "AI coding agent that turns issues into repair plans, patches, tests, and PR drafts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0"
]

[project.scripts]
issuefix-agent = "issuefix_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["issuefix_agent"]
